[package]
name = "rust-yolo-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bin"
path = "src/main.rs"

[dependencies]
console_log = "1.0.0"
log = "0.4.20"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3", features = [
    "HtmlVideoElement",
    "Navigator",
    "MediaStreamConstraints",
    "MediaDevices",
    "HtmlMediaElement",
    "MediaStream",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Performance",
] }
yew = { version = "0.21.0", features = ["csr"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
