[package]
name = "rust-yolo-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bin"
path = "src/main.rs"

[features]
default = ["candle", "tract"]
tract = ["ndarray", "tract-onnx"]
candle = ["candle-core", "candle-nn"]

[dependencies]
candle-core = { version = "0.3.2", optional = true }
candle-nn = { version = "0.3.2", optional = true }
console_log = "1.0.0"
float-ord = "0.3.2"
image = { version = "0.24.7", default-features = false, features = [
    "png",
    "jpeg",
] }
imageproc = { version = "0.23", default-features = false }
log = "0.4.20"
ndarray = { version = "0.15.6", optional = true }
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
tract-onnx = { version = "0.20", optional = true }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3", features = [
    "HtmlVideoElement",
    "HtmlSelectElement",
    "Navigator",
    "MediaStreamConstraints",
    "MediaDevices",
    "HtmlMediaElement",
    "MediaStream",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Performance",
] }
yew = { version = "0.21.0", features = ["csr"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
